fixed mainContainer grid area so that overflow is auto and doesn't push down any content

--- a/client/src/Components/Sidebar/Sidebar.module.scss
+++ b/client/src/Components/Sidebar/Sidebar.module.scss
@@ -1,7 +1,6 @@
 .mainContainer {
   width: 100%;
   height: 100%;
-  background-color: pink;
 }
 
 .sidebar {
@@ -59,6 +58,12 @@
   display: flex;
   width: 100%;
   position: relative;
+
+  @media only screen and (max-width: 1100px) {
+    width: 80%;
+    margin: auto;
+    margin-top: 20px;
+  }
   
   .searchIcon {
     position: absolute;
@@ -107,6 +112,12 @@
   height: auto;
   justify-content: space-around;
   width: 100%;
+
+  @media only screen and (max-width: 1100px) {
+    width: 80%;
+    margin: auto;
+    margin-top: 20px;
+  }
   
 
 
@@ -179,6 +190,10 @@
   width: 100%;
   background-color: #2D2D2D;
   position: relative;
+
+  @media only screen and (min-width: 1101px) {
+    display: none;
+  }
 
   .logoContainer {
     width: 100%;
